<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ILive社区秘书</string>
    <string name="app_info">ILive社区秘书详情</string>
    <string name="RadioButton1">首页新闻</string>
    <string name="RadioButton2">管理处</string>
    <string name="RadioButton3">便民</string>
    <string name="RadioButton4">智能家居</string>
    <string name="RadioButton5">设置</string>
    <string name="footer_text_load_more_tv">查看更多</string>
    <string name="logprogressdialog_loadingmsg">正在登录...</string>
    <string name="footer_text_loading">加载中...</string>
    <string name="head_tipsTextView">下拉刷新</string>
    <string name="head_lastUpdatedTextView">上次刷新</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_conv_tools">ConvToolsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_conv_tools_list">ShowConvToolsListActivity</string>
    <string name="text_mana_info_view">小区详情</string>
    <string name="text_mana_call_view">呼叫管理处</string>
    <string name="text_mana_comp_view">站内信</string>
    <string name="text_mana_bill_view">每月账单</string>
    <string name="takeout">外卖</string>
    <string name="market">超市</string>
    <string name="medical">医疗</string>
    <string name="service">服务</string>
    <string name="showlist_activitiy_mealName">套餐名称</string>
    <string name="showlist_activitiy_mealPrice">价格</string>
    <string name="showlist_activitiy_back">返回</string>
    <string name="title_activity_manager_commu_info">ManagerCommuInfoActivity</string>
    <string name="title_activity_hot_city">HotCityActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="log_labelStr">登录</string>
    <string name="exitload">注销登录</string>
    <string name="register_labelStr">注册</string>
    <string name="register_finishRegister">完成注册</string>
    <string name="log_forgotPwd">忘记密码？</string>
    <string name="register_quickRegister">快速注册</string>
    <string name="log_accountEditText_defaultStr">账号：请输入3-10位账号</string>
    <string name="log_pwdEditText_defaultStr">密码：请输入6位密码</string>
    <string name="register_accountEditText_defaultStr">*请输入3-10位账号</string>
    <string name="register_pwdEditText_defaultStr">*请输入6位密码</string>
    <string name="register_ackpwdEditText_defaultStr">*请再次输入密码</string>
    <string name="register_nameEditText_defaultStr">*昵称</string>
    <string name="register_groupidEditText_defaultStr">*门牌号码</string>
    <string name="sex">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="register_descriptionEditText_defaultStr">简介：</string>
    <string name="register_isVipEditText_defaultStr">VIP：</string>
    <string name="register_phoneNumberEditText_defaultStr">电话号码：</string>
    <string name="register_emailEditText_defaultStr">E-Mail：</string>
    <string name="register_addressEditText_defaultStr">家庭住址：</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="buttontext_takeout_call">拨打电话</string>
    <string name="buttontext_takeout_look">查看详情</string>
    <string name="buttontext_market_look">查看详情</string>
    <string name="buttontext_medical_look">查看详情</string>
    <string name="buttontext_service_look">查看详情</string>
    <string name="buttontext_store_look">店铺详情</string>
    <string name="exit_tip_dialogstyle">是否拨打该电话?</string>
    <string name="comfirm_dialogstyle">是</string>
    <string name="negative_dialogstyle">否</string>
    <string name="account">账号</string>
    <string name="doornum">问牌号</string>
    <string name="sex1">性别</string>
    <string name="telephone">电话</string>
    <string name="Email">E-mail</string>
    <string name="address">地址</string>
    <string name="activity_normaluse_text_remind">新消息提醒</string>
    <string name="activity_normaluse_text_receive">接受新消息通知</string>
    <string name="activity_normaluse_text_sound">声音</string>
    <string name="activity_normaluse_text_shaken">震动</string>
    <string name="activity_normaluse_text_nofunc">功能消息免打扰</string>
    <string name="sub_viewpager_setting_myaccount">我的账号</string>
    <string name="sub_viewpager_setting_normal">通用</string>
    <string name="sub_viewpager_setting_notice">系统通知</string>
    <string name="sub_viewpager_setting_clear">清空记录</string>
    <string name="sub_viewpager_setting_aboutilive">关于ILive社区秘书</string>
    <string name="textview_setting_noticeset">系统通知</string>
    <string name="textView_manager_comp">建议投诉</string>
    <string name="send">发送</string>
    <string name="textview_popwindow_logo">我们的意志</string>
    <string name="textview_popwindow_welcome">竭诚为您打造精心服务</string>
    <string name="setting_account_view">个人账户</string>
    <string name="activity_normaluse_text_infosort">信息排序方式</string>
    <string name="activity_normaluse_text_timesort">时间优先</string>
    <string name="activity_normaluse_text_stylesort">类型优先</string>
    <string name="activity_normaluse_text_handedit">手动编辑</string>
    <string name="show_conv_tools_store_name">店        名</string>
    <string name="show_conv_tools_store_info">简        介</string>
    <string name="show_conv_tools_store_time">营业时间</string>
    <string name="show_conv_tools_store_tel">联系电话</string>
    <string name="show_conv_tools_store_address">地        址</string>
    <string name="show_conv_tools_store_advice">推荐服务/产品</string>
    <string name="show_conv_tools_store_product">品        名</string>
    <string name="show_conv_tools_store_price">规格/价格</string>
</resources>