<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <RelativeLayout
         style="@style/sub_top_style"  >

        <ImageView
            android:id="@+id/ImageView_ConvToolsActivity_back"
            style="@style/returnbutton_style" />

        <TextView
           style="@style/sub_top_text_style"          
           android:text="@string/app_name"
            />

        <ImageView
            android:id="@+id/ImageView_ConvToolsActivity_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/stores_update_selector" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/TextView_ConvToolsActivity_takeout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/takeout"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/TextView_ConvToolsActivity_market"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/market"
            android:textColor="@color/black"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/TextView_ConvToolsActivity_medical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/medical"
            android:textColor="@color/black"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/TextView_ConvToolsActivity_service"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/service"
            android:textColor="@color/black"
            android:textSize="20.0dip" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/a" />

    <android.support.v4.view.ViewPager
        android:id="@+id/ViewPager_convTools"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="@color/black"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>