<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/conv_backgroud"
    android:paddingBottom="40dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingTop="40dip" >

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/exit_tip_dialogstyle"
        android:textColor="#ffffffff"
        android:textSize="20dip"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:src="@drawable/conv_tel_dig_headpic"
        android:textColor="#ffffffff" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/but1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/conv_tel_button_selecter"
            android:text="@string/comfirm_dialogstyle"
            android:textColor="#ffffffff"
            android:textSize="20dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/conv_tel_button_selecter"
            android:text="@string/negative_dialogstyle"
            android:textColor="#ffffffff"
            android:textSize="20dip"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>